make app compatible with java 8, rename function getCities1() to getCitiesFromAPI()